@@ -1,3 +1,8 @@
+2008-12-08  Ross Burton  <ross@linux.intel.com>
+
+	* libgconf-bridge/gconf-bridge.c:
+	Do not overwrite signal id (thanks Milan Crha)
+
 2008-07-02  Jorn Baayen  <jorn@openedhand.com>
 
 	* libgconf-bridge.vapi:
@@ -35,7 +40,7 @@
 	* configure.ac:
 	* doc/Makefile.in:
 	* po/POTFILES.in:
-	
+
 	Build fixes.
 
 2005-12-15  Jorn Baayen  <jorn@openedhand.com>
